fix horizontal scroll

--- a/src/components/modal-overlay/modal-overlay.module.scss
+++ b/src/components/modal-overlay/modal-overlay.module.scss
@@ -1,6 +1,6 @@
 .overlay {
     position: absolute;
-    width: 100vw;
+    width: 99vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 3;
